# bgrec

./: .gitignore  README.md  README1.md  decrypt-recording.cmd  install-portable.cmd  install-portable.ps1  install.ps1  pyproject.toml  requirements-windows.txt  requirements.txt  uninstall.ps1
.cursor/rules/: senior-reviewer-qa.mdc
.github/workflows/: build-windows-test.yml  build-windows.yml
app/: __init__.py  platform_check.py  runtime_bootstrap.py  version.py
app/cli/: main.py
app/config/: __init__.py  migrate.py  settings.py
app/crypto/: __init__.py  encryption.py
app/health/: __init__.py  report.py  state_issues.py
app/install/: __init__.py  portable.py
app/logging/: __init__.py  setup.py
app/recorder/: __init__.py  audio_recorder.py  (+1 more)
config/: config.toml.example  github-repo.txt
scripts/: __init__.py  build-windows-from-mac.sh  build-windows-test-from-mac.sh  build_exe.py  ci_release_ensure_gh.sh  ci_release_plan.sh  ci_release_sync_tag.sh  decrypt_recording.py  fix-windows-autostart.ps1  generate_update_manifest.py  package-windows-release.cmd  package-windows-release.ps1  package-windows-release.sh  print-install-oneliner.sh  pyinstaller_build.py  read_version.py  sync_version_from_pyproject.py  verify_deps.py  verify_drive_discovery.py  verify_version_from_pyproject.py  windows-ensure-ffmpeg.ps1
tests/: test_config_migrate.py  test_drive_discovery.py  test_health.py  test_ota_portable.py  test_ota_state.py  test_runtime_bootstrap.py  test_startup_ops.py  test_state_sync.py  test_updater_manifest.py  test_version.py  test_windows_startup.py
(+30 files in other folders)
