[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "background-audio-recorder"
version = "1.0.0"
description = "Windows background microphone recorder with encrypted Google Drive backup"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Background Audio Recorder Contributors" }]
dependencies = [
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "pydub>=0.25.1",
    "google-api-python-client>=2.120.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "cryptography>=42.0.0",
    "typer>=0.12.0",
    "click>=8.1.0",
    "shellingham>=1.5.0",
    "typing-extensions>=4.8.0",
    "google-auth>=2.28.0",
    "httplib2>=0.22.0",
    "uritemplate>=4.1.0",
    "rich>=13.7.0",
    "watchdog>=4.0.0",
    "loguru>=0.7.2",
    "tomli>=2.0.1; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.4.0", "ruff>=0.3.0"]

[project.scripts]
bgrec = "app.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
